@@ -1,3 +1,12 @@
+2026-02-08T02:12:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790653660 # 871
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
+* notice: next accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-07T01:45:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772000312 # 870
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
